# xlaude

./: AGENTS.md  CHANGELOG.md  Cargo.toml  FORK_MAINTENANCE.md  README.md  sync-upstream.sh
.github/workflows/: sync-upstream.yml
dashboard/static/: index.html
src/: codex.rs  dashboard.rs  input.rs  main.rs  state.rs  tmux.rs  utils.rs
src/commands/: agent_launcher.rs  agent_prompt.rs  checkout.rs  config.rs  create.rs  dashboard.rs  delete.rs  list.rs  mod.rs  open.rs
tests/: integration.rs  pipe_input.rs  test_dashboard.rs
tests/snapshots/: integration__checkout_branch_creates_worktree-2.snap  integration__checkout_branch_creates_worktree.snap  integration__checkout_existing_worktree_prompts_open.snap  integration__checkout_pull_request_creates_worktree-2.snap  integration__checkout_pull_request_creates_worktree.snap  integration__list_empty.snap
