[package]
name = "xlaude"
version = "0.6.0"
edition = "2024"
description = "A CLI tool for managing Claude instances with git worktree"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "env"] }
clap_complete = "4.5.59"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
colored = "3.0.0"
dialoguer = "0.12.0"
directories = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
bip39 = "2.2.0"
anyhow = "1.0.100"
ratatui = "0.29.0"
crossterm = "0.29.0"
atty = "0.2.14"
shell-words = "1.1.0"

[dev-dependencies]
insta = { version = "1.43.2", features = ["json", "redactions"] }
tempfile = "3.23.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
regex = "1.12.2"
temp-env = "0.3.6"
